# launchpad-token-dispenser

./: CHANGELOG.md  README.md  pyproject.toml
terraform/: dynamo_db.tf  iam.tf  launchpad-token-dispenser-lambda.tf  main.tf  terraform.tf.example  variables.tf
terraform/backends/: sit.tf  sndbx.tf  uat.tf
terraform/tfvars/: example.tfvars  ops.tfvars  outputs.tf
tests/: test_token_dispenser_lambda.py
token_dispenser/: configuration.py  logger.py  token_dispenser_lambda.py
token_dispenser/aws/: launchpad_token.py  s3.py  secret_manager.py
token_dispenser/repository/: client_token.py
